[Language] Avoid adding redundant target language to chrome://settings/languages

Bug: 855244
Change-Id: Ia52d8a7e6ebacd1d3882e16685e4dcdc95f31694
Reviewed-on: https://chromium-review.googlesource.com/1176344
Commit-Queue: anthonyvd <anthonyvd@chromium.org>
Reviewed-by: Jungshik Shin <jshin@chromium.org>
Reviewed-by: Michael Martis <martis@chromium.org>
Reviewed-by: anthonyvd <anthonyvd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588111}
Former-commit-id: 0accc8b963acbe34c0d542d52b8d57b85cc7b192