components/language/core/common/locale_util.h
@@ -16,6 +16,10 @@ void SplitIntoMainAndTail(const std::string& locale,
                           std::string* main_part,
                           std::string* tail_part);
 
+// Given a language code, extract the base language only.
+// Example: from "en-US", extract "en".
+std::string ExtractBaseLanguage(const std::string& language_code);
+
 // Returns whether or not the given list includes at least one language with
 // the same base as the input language.
 // For example: "en-US" and "en-UK" share the same base "en".
